website/deployment/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mmpl-do-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - web.mmpl.test.jetselliot.com
      secretName: mmpl-do-issuer-staging
  rules:
    - host: "web.mmpl.test.jetselliot.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mmpl-do-service
                port:
                  number: 80
